Sat Jan  9 23:15:25 2016  Jon Moss  <maclover7@users.noreply.github.com>

	* ext/openssl/ossl.c: Add missing variables to documentation
	  examples.  [Fix GH-1189]

Sat Jan  9 18:25:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.h (is_attrset_id): ASET is an attrset ID.  fix
	  unexpected safe call instead of an ordinary ASET.

Sat Jan  9 10:44:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, win32/setup.mak: extract RUBY_PROGRAM_VERSION from
	  RUBY_VERSION in version.h instead of RUBY_API_VERSION numbers in
	  include/ruby/version.h, and cut it into version numbers.

Sat Jan  9 07:13:33 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename PAGE_* to HEAP_PAGE_* because PAGE_SIZE is used
	  in Mac OS X.

	* test/ruby/test_gc.rb: catch up this fix.

Sat Jan  9 05:45:40 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: PAGE_BITMAP_PLANES (the number of bitmap) is 4, not 3.

Sat Jan  9 05:42:57 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename constant names HEAP_* to PAGE_*.

	  Keys of GC::INTERNAL_CONSTANTS are also renamed.

	* test/ruby/test_gc.rb: catch up this fix.

Fri Jan  8 22:30:06 2016  Akinori MUSHA  <knu@iDaemons.org>

	* doc/regexp.rdoc: [DOC] Elaborate on the \G anchor. [ci skip]

Fri Jan  8 19:49:27 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: remove heap_page::body. Instead of this field,
	  heap_page::start field works well.

Fri Jan  8 19:31:52 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename rb_heap_t::page_length to rb_heap_t::total_pages.

	  `page_length' is not clear (we may understand with length of
	  a page).

Fri Jan  8 17:07:14 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: remove heap_page::heap. This field is only used to recognize
	  whether a page is in a tomb or not. Instead of this field,
	  heap_page::flags::in_tomb (1 bit field) is added.

	  Also type of heap_page::(total|free|final)_slots are changed from
	  int to short. 2B is enough for them.
